--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
           
       - name: Install dependencies
         run: npm ci  # Use 'npm ci' for clean install
+      
+      - name: Install some more
+        run: npm install vue-router
+
+      - name: Install one more
+        run: npm install axios
         
       - name: Build Vue app
         run: npm run build
